# blog

./: .gitignore  .gitmodules  .prettierignore  Justfile  Makefile  config.yaml  pyproject.toml  secrets.yaml.aes
_plugins/: alternate.rkt  atom.rkt  codeblock.rkt  counter.rkt  crosslink.rkt  embed.rkt  emoji.rkt  flickr.rkt  internal-link.rkt  latex.rkt  nested-categories.rkt  tvtropes.rkt  youtube.rkt
_posts/: 2012-10-19-small-projects-source-code-on-github.htm  2013-05-18-firefox-vs-chrome.htm  2014-08-08-onwards-and-upwards.htm  404.htm  feed.htm  feed_index.htm  home.htm
_posts/Other/: 2013-05-18-firefox-vs-chrome.htm  2015-01-01-2015-reading-list.htm  2015-09-03-using-a-microsoft-keyboard-with-a-mac.htm  2015-12-07-free-https-blog-hosting.htm
_posts/Photography/: 2008-03-01-early-pictures.htm  2009-01-06-luck.htm  (+73 more)
_static/: custom.css  custom.js
_templates/: navbar.htm  post.htm
assets/: custom.js
content/: archive-by-date.md  archive-by-tag.md  resume.md
data/: 2012 Movie Reviews.yaml  2013 Movie Reviews.yaml  2014 Movie Reviews.yaml  goodreads.yaml  series.yaml
drafts/: _todo.md  pictogenesis.md  prevent-javascript-urls.md  rails-force-hsts-secure-behind-elb.md  rails-prevent-host-header-attacks.md  rails-rack-cors-allow-credentials.md  rails-ssrf-protection.md  sand-engine.md
layouts/: index.html  list.html  single.html  taxonomy.html
scripts/: flickr.py  goodreads.py  import-flickr.py  import-goodreads.py  import-obsidian-review.py  import-old-blog.py  optimize-images.py  requirements.txt  review-book.py  review-movie.py
static/: custom.js
(+5763 files in other folders)
