[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.2.1",
    "coloredlogs>=15.0.1",
    "flickrapi>=2.4.0",
    "html2text>=2025.4.15",
    "html5lib>=1.1",
    "imdbpy>=2022.7.9",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "pycryptodome>=3.23.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
